--- a/less/global.less
+++ b/less/global.less
@@ -10,6 +10,10 @@ html {
 html, body {
   font-family: 'Ubuntu', sans-serif;
   color: @main-font-color;
+
+  @media @mobile{
+    max-width:500px;
+  }
 }
 
 h1, h2, h3, h4, h5 {
