--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,11 +2,10 @@
     text-align: center;
     padding: 1.5%;
     background-color: @nav-bg;
-    margin-top: 1%;
 
     h1{
         font-size: 4rem;
-        padding-bottom: 2%;
+        padding-bottom: 1%;
         cursor:pointer;
     }//close h1
 
